# robocomp-shadow

./: .gitignore  README.md
.komment/: .gitkeep  00000.json  komment.json
IROS_experiments/person_controller_webots/: CMakeLists.txt  README.md  person_controller_webots.cdsl
IROS_experiments/webots_bridge_iros/: Makefile  data.csv
agents/LLM_agent/: CMakeLists.txt  LLM_agent.cdsl  LLM_local_external_server.py  LLM_local_launcher.py  LLM_local_test.py  LLM_local_test_temporal_series.py  README.md  json_editor.py  prompt_generator.py
agents/ainf_test/: ACTIVE_INFERENCE_MATH.md  CLAUDE.md  CMakeLists.txt  README.md  ainf_test.cdsl
agents/base_controller_agent/: CMakeLists.txt  DoxyFile  README.md  base_controller_agent.cdsl
agents/conv_agent/: CMakeLists.txt  conversationalAgent.cdsl
agents/door_detector/: CMakeLists.txt  README.md  door_detector.cdsl
agents/door_detector/src/: CMakeLists.txt  CMakeListsSpecific.txt  bt_affordance.xml  config.h  door_detector.cpp  door_detector.h  genericworker.cpp  genericworker.h  localUI.ui  main.cpp  mainUI.ui  nodes.cpp  nodes.h  params.h  specificworker.cpp  specificworker.h  ui_mainUI.h
agents/door_detector_agent/: CMakeLists.txt  DoxyFile  door_detector_agent.cdsl
agents/episodic_memory/: CMakeLists.txt  README.md  episodic_memory.cdsl
agents/eye_control_dsr/: CMakeLists.txt  README.md  eye_control_dsr.cdsl
agents/face_id_agent/: CMakeLists.txt  README.md  face_id_agent.cdsl
agents/follow_metrics_agent/: CMakeLists.txt  README.md  follow_metrics_agent.cdsl
agents/force_field_follower/: CMakeLists.txt  README.md  force_field_follower.cdsl
agents/forcefield_agent/: CMakeLists.txt  README.md  forcefield_agent.cdsl
agents/fridge_concept_python/: CMakeLists.txt  README.md  fridge_concept_python.cdsl
agents/g2o_agent/: CMakeLists.txt  README.md  g2o_agent.cdsl
agents/graph_launcher/: CMakeLists.txt  DoxyFile  README.md  graph_launcher.cdsl
agents/gtsam_agent_c/: CMakeLists.txt  DoxyFile  README.md  gtsam_agent_c.cdsl
agents/hazard_detector/: CMakeLists.txt  DoxyFile  README.md  hazard_detector.cdsl
agents/human_capturer/: CMakeLists.txt  README.md  human_capturer.cdsl
agents/human_capturer_orin/: human_capturer.cdsl
agents/human_driver_wb/: CMakeLists.txt  DoxyFile  README.md  human_driver_wb.cdsl
agents/inner_simulator_agent/: CMakeLists.txt  README.md.new  inner_simulator_agent.cdsl
agents/intention_predictor_agent/: CMakeLists.txt  DoxyFile  README.md  intention_prediction_agent.cdsl
agents/internal_representation/: .gitignore  CMakeLists.txt  README.md  internal_represenation.cdsl
agents/keyword_identifier_agent/: CMakeLists.txt  README.md  keyword_identifier_agent.cdsl
agents/local_grid/: README.md  local_grid.cdsl
agents/long_term_spatial_memory_agent/: CMakeLists.txt  README.md  long_term_spatial_memory_agent.cdsl
agents/master_controller/: CMakeLists.txt  master_controller.cdsl
agents/mission_controller/: CMakeLists.txt  DoxyFile  mission_controller.cdsl
agents/mission_controller_python/: CMakeLists.txt  README.md  mission_controller_python.cdsl
agents/objects_bridge_agent/: CMakeLists.txt  DoxyFile  README.md  objects_bridge_agent.cdsl  shadow_scene.json
agents/path_planner/: CMakeLists.txt  README.md  path_planner.cdsl
agents/people_bridge/: CMakeLists.txt  README.md  people_bridge_agent.cdsl
agents/person_detector/: CMakeLists.txt  DoxyFile  README.md  person_detector.cdsl
agents/python_ui_test/: CMakeLists.txt  README.md  python_ui_test.cdsl  shadow_test_guide.json
agents/room_detector/: CMakeLists.txt  README.md  room_detector.cdsl
agents/room_detector_bt/: CMakeLists.txt  DoxyFile  README.md  room_detector_bt.cdsl
agents/room_model_agent/: CMakeLists.txt  room_model_agent.cdsl
agents/room_planner/: CMakeLists.txt  README.md  room_planner_agent.cdsl
agents/scheduler/: CMakeLists.txt  DoxyFile  README.md  scheduler.cdsl
agents/shadow_agent/: CMakeLists.txt  DoxyFile  README.md  shadow_agent.cdsl
agents/shadow_dsr/: CMakeLists.txt  shadow_dsr.cdsl
agents/sm_grid_planner_agent/: CMakeLists.txt  sm_grid_planner_agent.cdsl
agents/sound_rotation/: CMakeLists.txt  README.md  sound_rotation.cdsl
agents/webots_bridge_iros/: Webots2Robocomp.cdsl
components/SVD48VBase/: CMakeLists.txt  README.md  SVD48VBase.cdsl
components/bulletsim/: CMakeLists.txt  README.md  bulletsim.cdsl
components/bumper/: bumper.cdsl
components/component_test/: CMakeLists.txt  (+2 more)
components/room_detector_pytorch_cpp/src/: CMakeLists.txt  common_types.h  consensus_graph.cpp  consensus_graph.h  consensus_graph_widget.cpp  consensus_graph_widget.h  consensus_manager.cpp  consensus_manager.h  consensus_visualization_adapter.cpp  consensus_visualization_adapter.h  custom_camera_controller.cpp  custom_camera_controller.h  door_concept.cpp  door_concept.h  door_detector.cpp  door_detector.h  door_model.cpp  door_model.h  door_projection.cpp  door_projection.h  door_thread.cpp  door_thread.h  equirectangular_projection.cpp  equirectangular_projection.h  lidar_odometry.cpp  lidar_odometry.h  mainUI.ui  model_based_filter.cpp  model_based_filter.h  pch.h  pointcloud_center_estimator.cpp  qt3d_visualizer.cpp  qt3d_visualizer.h  room_concept.cpp  room_concept.h  room_freezing_manager.cpp  room_freezing_manager.h  room_loss.cpp  room_loss.h  room_model.cpp  (+23 more)
components/room_detector_pytorch_cpp/src/test/: CMakeLists.txt  room_model.cpp  room_model.h  test_detector.cpp  test_room_model
etc/: 10-shadow.rules  autostart  autostart.sh  graph_names.h  plan.h  shadow_beta.json
insect/: README.md
insect/zed_component/src/: CMakeLists.txt  specificworker.cpp  specificworker.h
path_concept/: dwa_optimizer.py  grad_lane.py  mask2former.py  trans.py
tools/: cog.sh  cog.toml  cog_bump.sh  cognitive.sh  room_and_door_kill.sh  room_and_door_kill_and_restart_dsr.sh  shadow_dsr_sim.sh  shadow_dsr_sim_bullet.sh  shadow_iros_sim.sh  shadow_launcher.sh  shadow_launcher_sim.sh  shadow_room_and_doors.sh  shadow_rooms.sh  start_shadow.sh  start_shadow_simple.sh  sub.toml  sub_bump.toml  subcognitive.py
(+1533 files in other folders)
